# protobuf-c-win-bin

./: .bazelrc  .gitignore  .gitmodules  BUILD  MODULE.bazel  README.md  base.bzl  ci.py  release.py
.github/workflows/: release.yml  test.yml  update.yml
pack_protobuf_c/: BUILD  MODULE.bazel
pack_protobuf_c/src/: BUILD
proto/protobuf-c/: BUILD
src/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE.bazel  build_protobuf.bat  build_protobuf_c.bat  c_proto.bzl  cmake_build_protobuf.bat
src/protobuf-c/: BUILD  protobuf-c.c  protobuf-c.h
src/protoc-gen-c/: BUILD
src/t/: BUILD
src/t/issue204/: BUILD
src/t/issue220/: BUILD
src/t/issue251/: BUILD
src/t/issue330/: BUILD
src/t/issue375/: BUILD
src/t/issue440/: BUILD
src/t/issue745/: BUILD
src/t/version/: BUILD
src_copy/: MODULE.bazel  c_proto.bzl
src_copy/t/: BUILD
src_copy/t/issue204/: BUILD
src_copy/t/issue220/: BUILD
src_copy/t/issue330/: BUILD
src_copy/t/issue375/: BUILD
src_copy/t/issue389/: BUILD
test/: BUILD  test-full.cc  test.cc  test.proto  test2.cc  test2.proto
test/base/: BUILD  types.proto
test/msg/: BUILD  msg.proto
tools/: bin.BUILD  extensions.bzl  tools_reg.bzl  update_tools_reg.py
