""" Module """
module(name = "rules_c_proto")

get_protoc = use_extension("//tools:extensions.bzl", "get_protoc")
use_repo(get_protoc, "get_protoc_")
get_protoc_c = use_extension("//tools:extensions.bzl", "get_protoc_c")
use_repo(get_protoc_c, "get_protoc_c_")

bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)
